quick_tests/cases/pass/pXX_function_call_with_typed_params_and_return.webx
fn main() -> i32 { let x: i32 = 5; fn add(a: i32, b: i32) -> i32 { return a + b; } return add(x, 3); }