quick_tests/cases/fail/f10_invalid_return_type_arrow.webx
fn add(a: i32, b: i32) -> i32 { return a + b; } fn main() -> i32 { let result: string = add(2, 3); println(result); return 0; }